feat: make time editable
- Make time editable
- Improved focus ring & color
- Removed number input appearance
- Provide thumbnail screenshot

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  input[type="number"].appearance-none::-webkit-inner-spin-button,
+  input[type="number"].appearance-none::-webkit-outer-spin-button {
+    appearance: none;
+  }
+}
+
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
