feat: update done ratio
- added update done ratio feature
- fixed invalidate queries
- fixed empty additional issues query

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@
   background-color: #1e3a8a;
   border-radius: 3px;
 }
+
+input[name="done_ratio"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  cursor: pointer;
+  width: 2px;
+}
